# Multi-Modal-Evidence-Review

./: README.md  main.py  output.csv  pyproject.toml  requirements.txt  test.py  test2.py  test_openrouter.py  test_vision.py
evalution/: main.py
src/: claim_extractor.py  image_analyzer.py  utils.py  verifier.py
